finding the treasure

--- a/pirate.html
+++ b/pirate.html
@@ -28,111 +28,202 @@
         Number of locations checked is zero.</p>
 
     <p id="penalty" style="color: rgb(51, 97, 5);">Penalty is zero.</p>
-    <p style="color: crimson; font-size: large;font-family: cursive;">Click for help</p>
+    <p style="color: crimson; font-size: large;font-family: cursive;" onclick="help()" class=" btn btn-success btn-lg">
+        Click for help</p>
     <p id="help" style="color: darkblue;font-size: small;font-family: fantasy;">Help repor</p>
 
 
     <div class="container">
         <div class="row">
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(0)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game1">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(1)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game2">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(2)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game3">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" id="img4" onclick="check(3)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game4">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
-            </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
-            </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
-            </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
-            </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(4)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game5">
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(5)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game6">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(6)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game7">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(7)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game8">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(8)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game9">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
-            </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
-            </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
-            </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
-            </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(9)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game10">
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(10)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game11">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(11)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game12">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(12)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game13">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(13)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game14">
             </div>
-            <div class="col-md-2">
-                <img src="location.jpg" alt="location" width="150px" height="150px">
+            <div class="col-md-2" onclick="check(14)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game15">
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-2" onclick="check(15)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game16">
+            </div>
+            <div class="col-md-2" onclick="check(16)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game17">
+            </div>
+            <div class="col-md-2" onclick="check(17)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game18">
+            </div>
+            <div class="col-md-2" onclick="check(18)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game19">
+            </div>
+            <div class="col-md-2" onclick="check(19)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game20">
+            </div>
+        </div>
 
-
-
-
-
-
-
-
+        <div class="row">
+            <div class="col-md-2" onclick="check(20)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game21">
+            </div>
+            <div class="col-md-2" onclick="check(21)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game22">
+            </div>
+            <div class="col-md-2" onclick="check(22)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game23">
+            </div>
+            <div class="col-md-2" onclick="check(23)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game24">
+            </div>
+            <div class="col-md-2" onclick="check(24)">
+                <img src="location.jpg" alt="location" width="150px" height="150px" id="game25">
+            </div>
+        </div>
 
     </div>
+
+
+
+    <!----js for above code  --->
+    <script>
+
+        var ids = ["game1", "game2", "game3", "game4", "game5", "game6", "game7", "game8", "game9", "game10", "game11", "game12",
+            "game13", "game14", "game15", "game16", "game17", "game18", "game19", "game20", "game21", "game22", "game23", "game24", "game25"];
+        var checkCount = 0;
+        var penalty = 0;
+        var lastCheck = 0;
+        var treasureLocation = 5;
+        var trapLocation = 18;
+        var gameOver = false;
+
+        // adding function 
+        function check(position) {
+            if (gameOver) return;
+
+            var id = ids[position];
+
+            var pic = document.getElementById(id);
+
+            switch (position) {
+                case treasureLocation:
+                    pic.src = "treasure.jpg";
+                    break;
+                case trapLocation:
+                    pic.src = "trap.jpg";
+                    break;
+                default:
+                    pic.src = "bones.jpg";
+            }
+
+            checkCount++;
+            penalty++;
+            switch (position) {
+                case treasureLocation:
+                    gameOver = true;
+                    penalty -= 3;
+                    break;
+                case trapLocation:
+                    gameOver = true;
+                    penalty += 4;
+                    break;
+                default:
+
+            }
+
+            document.getElementById("locations").textContent = `number of locations ${checkCount}`;
+            document.getElementById("penalty").textContent = `penalty is ${penalty}`;
+
+            lastCheck = position;
+        }
+
+        // adding help function
+        function help() {
+
+            var treasureRow = Math.floor(treasureLocation / 5);
+            var treasureCol = treasureLocation % 5;
+            var lastRow = Math.floor(lastCheck / 5);
+            var lastCol = lastCheck % 5;
+
+
+            if (
+                Math.abs(lastRow - treasureRow) <= 1 &&
+                Math.abs(lastCol - treasureCol) <= 1 &&
+                (Math.abs(lastRow - treasureRow) !== 0 || Math.abs(lastCol - treasureCol) !== 0)
+            ) {
+                var helpText = "Can smell it";
+            }
+
+            else if (
+                Math.abs(lastRow - treasureRow) + Math.abs(lastCol - treasureCol) === 2
+            ) {
+                var helpText = "Close Matie";
+            }
+            else {
+                var helpText = "Step Faster";
+            }
+            penalty += 2;
+
+
+            document.getElementById("penalty").textContent = `penalty is  ${penalty}`;
+            document.getElementById("help").textContent = helpText;
+
+            document.getElementById("help").onclick = help;
+
+        }
+    </script>
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
