--- a/react.html
+++ b/react.html
@@ -1,8 +1,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <title>speed check</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,17 +24,38 @@
     <div id="counter">Counts</div>
 
 
-    <button class="btn btn-success" id="timerstart">Start Timer</button>
+    <button class="btn btn-success" id="timerstart" onclick="setTimeout">Start Timer</button>
     <button class="btn btn-success" id="react" onclick="recordTime()">React</button>
 
     <script>
 
         var reactTime = undefined;
         function recordTime() {
-            reactTime = Date.now(); // Record the current time
+            reactTime = Date.now();
             console.log("Reaction time is recorded : " + reactTime);
         }
         document.getElementById("react").onclick = recordTime;
+
+        function startTime() {
+            for (let i = 0; i <= 8; i++) {
+                setTimeout(function () {
+                    document.getElementById("counter").innerHTML = "Count: " + i;
+                }, (8 - i) * 1000);
+            }
+        }
+        setTimeout(function () {
+            if (reactTime === undefined) {
+                document.getElementById("target").innerHTML = "Too Slow";
+            } else {
+                var endTime = Date.now();
+                var elapsed = endTime - reactTime;
+                document.getElementById("target").innerHTML = "Time was " + elapsed + " ms";
+            }
+        }, 8000);
+
+        document.getElementById("timerstart").onclick = startTime;
+
+
     </script>
 
 
