--- a/merger.html
+++ b/merger.html
@@ -3,6 +3,17 @@
 
 <head>
     <title>Add text</title>
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+
     <style>
         .flex-container {
             display: flex;
@@ -26,6 +37,8 @@
             }
         }
     </style>
+
+
 </head>
 
 
@@ -37,11 +50,17 @@
         <div>row item 1</div>
         <div>row item 2</div>
         <div>row item 3</div>
-    </div>
-<input type="text" id="value" value="enter text element"><br>
-    <button onclick="addend()">Add end</button>
+    </div><br>
+    <input type="text" id="value" value="enter text element"><br><br>
+    <button onclick="addend()" class="btn btn-primary">Add end</button>
 
-   
+    <br><br>
+    <button onclick="remove()" class="btn btn-danger">Remove</button>
+
+    <br><br>
+    <button onclick="addFront()" class="btn btn-primary">Add front</button>
+
+
 
 
 </body>
@@ -49,18 +68,36 @@
 
 
     function addend() {
-        word= document.getElementById("value").value;
-        result= document.createElement("div");
+        word = document.getElementById("value").value;
+        result = document.createElement("div");
         result.innerHTML = word;
         result.className = "merger";
         flex_container = document.getElementById("target");
         flex_container.appendChild(result);
     }
 
-    
+    function remove() {
+        mergerItems = document.getElementsByClassName("merger");
+        length = mergerItems.length;
+
+        if (length > 0) {
+            middleItem = Math.floor(length / 2);
+            mergerItems[middleItem].remove();
+        }
+    }
+
+    function addFront() {
+        word = document.getElementById("value").value;
+        result = document.createElement("div");
+        result.innerHTML = word;
+        result.className = "merger";
+        flex = document.getElementById("target");
+        firstChild = flex.firstChild;
+        flex.insertBefore(result, firstChild);
+    }
 
 
-    </script>
+</script>
 
 
 </html>
