--- a/pirate.html
+++ b/pirate.html
@@ -127,7 +127,7 @@
     </div>
 
 
-    <button class="btn btn-danger btn-start-timer" onclick="newGame()">New Game</button>
+    <button class="btn btn-primary btn-start-timer" onclick="newGame()">New Game</button>
 
 
     <!----js for above code  --->
